--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -37,7 +37,7 @@
 
     <string name="report_issue">Previous Crash Detected</string>
     <string name="platform">Copying logcat content to clipboard\nPlease paste in the issue report</string>
-    <string name="log_saved">Log saved to %1$s</string>
+    <string name="log_saved">Log saved to \"System Path\"</string>
     <string name="bios_config">Configuration failed!</string>
     <string name="menu_debug">Submit Error Logs</string>
 
