--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="select_controller_title">Select Controller</string>
     <string name="select_controller_message">Press any button on the controller %1$s to assign to port</string>
     <string name="controller_already_in_use">This controller is already in use!</string>
+    <string name="joystick_layout">Use Joystick For Dpad Input</string>
     <string name="modified_layout">Enable Custom Key Layout</string>
     <string name="controller_compat">Enable Compatibility Mode</string>
     <string name="mic_in_port_2">Microphone plugged into port 2</string>
