--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="select_render">PVR Rendering (does nothing for now)</string>
     <string name="select_fps">Show OnScreen FPS</string>
     <string name="select_software">Force Software Rendering</string>
-    <string name="select_sound">Enable Emulator Sound</string>
+    <string name="select_sound">Disable Emulator Sound</string>
     <string name="select_depth">Rendering Depth</string>
     <string name="select_force_gpu">Force v6 GPU Config</string>
     <string name="default_disk">Set Default Disk</string>
