--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="missing_bios">BIOS Missing. The Dreamcast BIOS is required for this emulator to work. Place the BIOS file in %1$s/data/dc_boot.bin</string>
     <string name="missing_flash">Flash Missing. The Dreamcast Flash is required for this emulator to work. Place the Flash file in %1$s/data/dc_flash.bin</string>
     <string name="require_bios">You have to provide the BIOS</string>
+    <string name="data_folder">The data folder is assumed</string>
     
     <string name="folder_bios">BOOT BIOS</string>
     <string name="folder_select">SELECT CURRENT FOLDER</string>
