--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="browser_path">Default System Path</string>
     <string name="games_path">Storage Path (location of .gdi, .chd or .cdi images)</string>
     <string name="game_path">Default Game Storage</string>
+    <string name="config_home">Please configure a home directory</string>
+    <string name="config_game">Please configure a games directory</string>
     
     <string name="boot_bios">Boot Dreamcast Bios</string>
     <string name="missing_bios">BIOS Missing. The Dreamcast BIOS is required for this emulator to work. Place the BIOS file in %1$s/data/dc_boot.bin</string>
