--- a/shell/debug/res/values/strings.xml
+++ b/shell/debug/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
 
-    <string name="app_name">reicast debugger</string>
+    <string name="app_name">reicast debug</string>
 </resources>
