--- a/shell/debug/res/values/strings.xml
+++ b/shell/debug/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
 
     <string name="app_name">reicast debug</string>
+
+    <string name="select_notify">Message Notifications</string>
+
+    <string name="textOn">ON</string>
+    <string name="textOff">OFF</string>
+
 </resources>
