--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -42,10 +42,7 @@
     <string name="games_listing">Available Dreamcast Games</string>
 
     <string name="report_issue">Previous Crash Detected</string>
-    <string name="platform">Copying logcat content to clipboard\nPlease paste in the issue report</string>
-    <string name="log_saved">Log saved to \"System Path\"</string>
     <string name="bios_config">Configuration failed!</string>
-    <string name="menu_debug">Submit Error Logs</string>
 
     <string name="customize_touch_controls">Customize Touch Controls</string>
     <string name="launch_editor">Launch Editor</string>
@@ -88,8 +85,8 @@
     <string name="paths">Paths</string>
     <string name="input">Input</string>
     <string name="about">About</string>
-    <string name="messages">Messages</string>
     <string name="rateme">Rate Me</string>
+    <string name="messages">Test Suite</string>
     
     <string name="textOn">ON</string>
     <string name="textOff">OFF</string>
