--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -22,7 +22,7 @@
 
     <string name="optimization_opts">Optimization and Debugging Options</string>
     <string name="experimental_opts">Expert (May cause widespread panic)</string>
-    <string name="select_native">Disable Native Interface</string>
+    <string name="select_native">Enable Native Interface</string>
     <string name="select_dynarec">Dynarec Options</string>
     <string name="select_unstable">Unstable Optimisations</string>
     <string name="select_region">DC Region</string>
