--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -12,7 +12,7 @@
     
     <string name="boot_bios">Boot Dreamcast BIOS</string>
     <string name="missing_bios_title">Missing Dreamcast BIOS</string>
-    <string name="missing_bios">The Dreamcast BIOS is missing. A dump of the Dreamcast BIOS is required for this emulator to work. Place the BIOS file is named "dc_boot.bin" and is in %1$s/data/dc_boot.bin</string>
+    <string name="missing_bios">The Dreamcast BIOS is missing. A dump of the Dreamcast BIOS is required for this emulator to work. Make sure the BIOS file is named "dc_boot.bin" and is in %1$s/data/dc_boot.bin</string>
     <string name="missing_flash_title">Missing Dreamcast Flash ROM</string>
     <string name="missing_flash">The Dreamcast Flash is missing. A dump of the Dreamcast Flash is required for this emulator to work. Make sure the Flash file is named "dc_flash.bin" and is in %1$s/data/dc_flash.bin</string>
     <string name="require_bios">You have to provide a Dreamcast BIOS.</string>
