--- a/shell/android/res/values-da/strings.xml
+++ b/shell/android/res/values-da/strings.xml
@@ -6,20 +6,28 @@
     <string name="browser_path">Standard system sti</string>
     <string name="games_path">Spil sti (placering af .gdi, .chd eller .cdi afbildninger)</string>
     <string name="game_path">Standard spil sti</string>
+    <string name="config_home">Konfigurer venligst et hjemme katalog.</string>
+    <string name="config_game">Konfigurer venligst et spil katalog.</string>
+    <string name="unsupported">Ikke suporteret kerne version!</string>
     
     <string name="boot_bios">Start Dreamcast Bios</string>
+    <string name="missing_bios_title">Manglende Dreamcast BIOS</string>
     <string name="missing_bios">BIOS mangler. Dreamcast BIOS er nødvendig for at denne emulator kan virke. Placer BIOS filen i %1$s/data/dc_boot.bin</string>
+    <string name="missing_flash_title">Manglende Dreamcast flash ROM</string>
     <string name="missing_flash">Flash mangler. Dreamcast Flash er nødvendig for at denne emulator kan virke. Placer Flash filen i %1$s/data/dc_flash.bin</string>
     <string name="require_bios">Du er nødt til at levere en BIOS</string>
+    <string name="data_folder">Den aktuelle folder er formodet.</string>
     
     <string name="folder_bios">START BIOS</string>
     <string name="folder_select">VÆLG AKTUELLE FOLDER</string>
 
     <string name="optimization_opts">Optimerings- og fejlfindingsopsætninger</string>
     <string name="experimental_opts">Eksperimentel (Kan medføre vidtspredt panik)</string>
+    <string name="select_native">Aktiver native interface</string>
     <string name="select_dynarec">Dynarec option</string>
     <string name="select_unstable">Ustabile optimeringer</string>
     <string name="select_region">DC region</string>
+    <string name="select_broadcast">Broadcast</string>
     <string name="select_limitfps">Begræns FPS</string>
     <string name="select_mipmaps">Brug Mipmaps (rettelse for gammel SGX540)</string>
     <string name="select_stretch">Bredskærmstilstand</string>
@@ -27,7 +35,7 @@
     <string name="select_render">PVR rendering (gør ikke noget i øjeblikket)</string>
     <string name="select_fps">Vis FPS</string>
     <string name="select_software">Tving software rendering</string>
-    
+    <string name="select_sound">Deaktiver emulator lyd</string>
     <string name="select_depth">Renderingsdybde</string>
     <string name="select_force_gpu">Tving v6 GPU konfiguration</string>
     <string name="default_disk">Sæt standard disk</string>
@@ -51,6 +59,7 @@
     <string name="select_controller_title">Vælg controller</string>
     <string name="select_controller_message">Tryk på en vilkårlig knap på controller %1$s for at knytte den til en port</string>
     <string name="controller_already_in_use">Denne controller er allerede i brug!</string>
+    <string name="joystick_layout">Brug joystick som D-Pad Input</string>
     <string name="modified_layout">Aktiver brugerdefineret layout</string>
     <string name="controller_compat">Aktiver kompatibilitesmode</string>
     <string name="mic_in_port_2">Mikrofon tilsluttet port 2</string>
@@ -66,10 +75,10 @@
     <string name="revision_text">Version: %1$s [%2$s]</string>
     
     <string-array name="controllers">
-    <item>Controller A</item>
-    <item>Controller B</item>
-    <item>Controller C</item>
-    <item>Controller D</item>
+        <item>Controller A</item>
+        <item>Controller B</item>
+        <item>Controller C</item>
+        <item>Controller D</item>
     </string-array>
     
     <string name="browser">Browser</string>
@@ -78,11 +87,13 @@
     <string name="input">Taster</string>
     <string name="about">Om</string>
     <string name="rateme">Bedøm mig</string>
+    <string name="messages">Test Suite</string>
     
     <string name="textOn">TIL</string>
     <string name="textOff">FRA</string>
 
     <string name="cancel">Afbryd</string>
+    <string name="dismiss">Afvis</string>
     <string name="manual">Manuel</string>
-
+    <string name="options">Indstillinger</string>
 </resources>
