--- a/shell/android/res/values-fr/strings.xml
+++ b/shell/android/res/values-fr/strings.xml
@@ -23,7 +23,7 @@
  
     <string name="optimization_opts">Options d\'optimisations et de débogage</string>
     <string name="experimental_opts">Experimental (peut causer des crashs)</string>
-    <string name="select_native">Activer l'interface native</string>
+    <string name="select_native">Activer l\'interface native</string>
     <string name="select_dynarec">Dynarec</string>
     <string name="select_unstable">Optimisations instables</string>
     <string name="select_region">Région du bios</string>
