Check for alternate joystick handlers (GameKeyboard, etc.)
Remove unused imports from various activities
Verify if gamekeyboard is being used to replace hardware
Configure stock controller layout as default

--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="joystick_layout">Use Joystick For D-Pad Input</string>
     <string name="modified_layout">Enable Custom Key Layout</string>
     <string name="controller_compat">Enable Compatibility Mode</string>
+    <string name="controller_unavailable">Gamepad IME detected!\nPlease disable native interface</string>
     <string name="mic_in_port_2">Microphone plugged into port 2</string>
     
     <string name="customize_physical_controls">Customize Physical Controls</string>
