Add game details as webpage popup during launch process
Currently supports games with standard naming (i.e. Dead or Alive 2) or
brackets for details (i.e. Dead or Alive 2 [NTSC-J])

--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -42,6 +42,8 @@
     
     <string name="games_listing">Game List</string>
     
+    <string name="game_details">Game Information</string>
+    
     <string name="report_issue">Previous Crash Detected</string>
     <string name="bios_config">Configuration failed!</string>
     
