Preload game details to allow setting icons, faster loading

--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -45,7 +45,8 @@
     
     <string name="game_details">Game Info - %1$s</string>
     <string name="info_unavailable">Game Info Unavailable</string>
-    
+    <string name="disk_loading">Loading Disk Info</string>
+
     <string name="report_issue">Previous Crash Detected</string>
     <string name="bios_config">Configuration failed!</string>
     
