--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="experimental_opts">Experimental (May cause widespread panic)</string>
     <string name="select_bios">BIOS Region (dc_flash[X].bin)</string>
     <string name="select_details">Enable Game Details</string>
-    <string name="select_native">Enable Native Interface</string>
+    <string name="select_native">Native Mode [No OSD]</string>
     <string name="select_dynarec">Dynarec Options</string>
     <string name="select_unstable">Unstable Optimisations</string>
     <string name="select_cable">Cable Type</string>
