Update a stray translation for troubleshooting

--- a/shell/android/res/values-da/strings.xml
+++ b/shell/android/res/values-da/strings.xml
@@ -93,7 +93,7 @@
     <string name="input">Taster</string>
     <string name="about">Om</string>
     <string name="rateme">Bedøm mig</string>
-    <string name="messages">Test Suite</string>
+    <string name="messages">Troubleshoot</string>
     
     <string name="textOn">TIL</string>
     <string name="textOff">FRA</string>
