Stop relying on a bug to maintain popup view width
The original view was held in place due to an Android bug that began
around ICS, which did not stretch views beyond a set amount when
displayed in modal dialogs.

Clean up the layout to better fit the popup items

--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -101,7 +101,7 @@
     <string name="input">Input</string>
     <string name="about">About</string>
     <string name="rateme">Rate Me</string>
-    <string name="messages">Test Suite</string>
+    <string name="messages">Send Logs</string>
     <string name="cloud">Cloud VMU</string>
     
     <string name="textOn">ON</string>
