--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -30,6 +30,7 @@
     
     <string name="optimization_opts">Optimization and Debugging Options</string>
     <string name="experimental_opts">Experimental (May cause widespread panic)</string>
+    <string name="select_reios">Use reios BIOS</string>
     <string name="select_bios">BIOS Region (dc_flash[X].bin)</string>
     <string name="select_details">Enable Game Details</string>
     <string name="select_native">Native Mode [No OSD]</string>
