--- a/shell/android/res/values-de/strings.xml
+++ b/shell/android/res/values-de/strings.xml
@@ -33,7 +33,7 @@
     <string name="select_reios">Verwende reios-BIOS</string>
     <string name="select_bios">BIOS-Region (dc_flash[X].bin)</string>
     <string name="select_details">Aktiviere Spiele-Details</string>
-    <string name="select_native">Nativer Modus [Kein OSD]</stri
+    <string name="select_native">Nativer Modus [Kein OSD]</string>
     <string name="select_dynarec">Dynarec-Optionen</string>
     <string name="select_unstable">Instabile Optimierungen</string>
     <string name="select_cable">Kabeltyp</string>
