--- a/shell/android/res/values-pt/strings.xml
+++ b/shell/android/res/values-pt/strings.xml
@@ -2,10 +2,12 @@
 
     <string name="menu_settings">Configurações</string>
 
-    <string name="system_path">Diretório do sistema (localização do diretório de dados com os arquivos dc_boot.bin / dc_flash.bin)</string>
+    <string name="system_path">Diretório da BIOS (local dos arquivos dc_boot.bin/dc_flash.bin)</string>
     <string name="browser_path">Diretório padrão de jogos</string>
-    <string name="games_path">Caminho do armazenamento (local das imagens .gdi, .chd ou .cdi)</string>
-    <string name="game_path">Diretório padrão de jogos</string>
+    <string name="games_path">Diretório dos jogos (local das imagens .gdi, .chd ou .cdi)</string>
+    <string name="button_theme">Tema dos botões na tela</string>
+	
+    <string name="game_path">Diretório padrão de jogos</string>	
     <string name="config_home">Por favor configure um diretório principal.</string>
     <string name="config_data">Por favor mova a BIOS para %1$s/data/</string>
     <string name="config_game">Por favor configure o diretório dos jogos.</string>
@@ -27,6 +29,7 @@
 
     <string name="optimization_opts">Opções de Otimização e Depuração</string>
 	<string name="experimental_opts">Experimental (Pode causar problemas)</string>
+    <string name="select_reios">Usar reios BIOS</string>
     <string name="select_bios">Região da BIOS (dc_flash[X].bin)</string>
     <string name="select_details">Habilitar detalhes do jogo</string>
     <string name="select_native">Modo nativo [Sem OSD]</string>	
@@ -45,7 +48,7 @@
     <string name="select_sound">Desabilitar Som do Emulador</string>
     <string name="select_depth">Profundidade da Renderização</string>
     <string name="select_force_gpu">Forçar Configurações GPU v6</string>
-    <string name="default_disk">Definir disco padrão</string>
+    <string name="default_disk">Disco padrão</string>
 
     <string name="games_listing">Lista de jogos</string>
 
@@ -54,7 +57,7 @@
     <string name="disk_loading">Carregando Informações do Disco</string>
 	
     <string name="report_issue">Falha Anterior Detectada</string>
-    <string name="bios_config">Falha ao Configurar!</string>
+    <string name="bios_config">Falha ao configurar!</string>
 
     <string name="customize_touch_controls">Costumizar controles de toque</string>
     <string name="launch_editor">Iniciar editor</string>
