Replace SlidingDrawer with compatibility DrawerLayout
Remove actionable references (requires v7 overhaul)

Darken background and remove unused views

Fix alignment of pseudo action bar to list

--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -100,6 +100,8 @@
         <item>Controller D</item>
     </string-array>
     
+    <string name="drawer_open">Menu Opened</string>
+	<string name="drawer_shut">Menu Closed</string>	
     <string name="browser">Browser</string>
     <string name="settings">Settings</string>
     <string name="paths">Paths</string>
