linux/man: Improve reicast man page

--- a/shell/linux/man/reicast.1
+++ b/shell/linux/man/reicast.1
@@ -17,7 +17,7 @@ reicast \- The Sega Dreamcast Emulator.
 .SH "EXAMPLE COMMANDLINE"
 
 .TP
-\fBNo command line options will start reicast in menu mode.\fR
+\fBNo command line options will start reicast and load all values from the config file.\fR
 reicast
 
 .TP
