Linux: Add man page for reicast-joyconfig

--- a/shell/linux/man/reicast.1
+++ b/shell/linux/man/reicast.1
@@ -101,3 +101,6 @@ Head over to reicast's git repository if you want to contibute:
 
 .TP
 This is free software; you can redistribute it and/or modify it under the terms of the GNU Public License (Version 2).
+
+.SH "SEE ALSO"
+\fBreicast-joyconfig\fR(1)
