Linux/man: Use gdi as example image file

--- a/shell/linux/man/reicast.1
+++ b/shell/linux/man/reicast.1
@@ -22,7 +22,7 @@ reicast
 
 .TP
 \fBOverride the image specified in the config file to load a specific image.\fR
-reicast /path/to/your/image.cdi
+reicast /path/to/your/image.gdi
 
 .TP
 \fBStart reicast on X11 in full screen.\fR
