Update linux manpages.

--- a/shell/linux/man/reicast.1
+++ b/shell/linux/man/reicast.1
@@ -1,4 +1,4 @@
-.\" retroarch.1:
+.\" reicast.1:
 
 .TH  "REICAST" "1" "August 22, 2015" "REICAST" "System Manager's Manual: reicast"
 
@@ -28,15 +28,35 @@ reicast /path/to/your/image.gdi
 \fBStart reicast on X11 in full screen.\fR
 reicast -config x11:fullscreen=1
 
+.SH "CONFIG FILE"
+
+.TP
+The config file for \fBreicast\fR can be found at:
+
+.IP
+~/.config/reicast/emu.cfg
+.LP
+
+.SH "VMU SAVE FILE"
+
+.TP
+The VMU save files can be found at ~/.local/share/reicast/, by default \fBreicast\fR will create two VMU files for the first controller:
+
+.IP
+~/.local/share/reicast/vmu_save_A1.bin
+.br
+~/.local/share/reicast/vmu_save_A2.bin
+.LP
+
 .SH "BIOS AND FLASH ROMS"
 
 .TP
 \fBreicast\fR currently needs BIOS/Flash ROMs of the original Dreamcast. For copyright reasons it is not possible to distribute them bundled with \fBreicast\fR, so you have to dump them from your own Dreamcast. \fBreicast\fR will look for these files in:
 
 .IP
-~/.reicast/data/dc_boot.bin
+~/.local/share/reicast/data/dc_boot.bin
 .br
-~/.reicast/data/dc_flash.bin
+~/.local/share/reicast/data/dc_flash.bin
 .LP
 
 If you do not supply these files, \fBreicast\fR will fall back to reios, an experimental replacement for the original Dreamcast BIOS. However, your experience might not be as stable and some feature might be missing (e.g. booting to the Dreamcast menu will NOT work).
