Cleanup for Nougat compatibility
This will also stop preventing a build when a translation is missing.

--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -1,4 +1,6 @@
-<resources>
+<resources
+  xmlns:tools="http://schemas.android.com/tools"
+  tools:ignore="MissingTranslation" >
     
     <string name="menu_settings">Settings</string>
     
