--- a/shell/android/res/values/strings.xml
+++ b/shell/android/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="select_reios">Use reios BIOS</string>
     <string name="select_bios">BIOS Region (dc_flash[X].bin)</string>
     <string name="select_details">Enable Game Details</string>
-    <string name="select_native">Native Mode [No OSD]</string>
+    <string name="select_native">Native Gamepad Mode [No OSD]</string>
     <string name="select_dynarec">Dynarec Options</string>
     <string name="select_unstable">Unstable Optimisations</string>
     <string name="select_cable">Cable Type</string>
