--- a/shell/android-studio/app/src/main/res/values/strings.xml
+++ b/shell/android-studio/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="select_software">Force Software Rendering</string>
     <string name="select_sound">Disable Emulator Sound</string>
     <string name="select_depth">Rendering Depth</string>
-    <string name="select_force_gpu">Force v6 GPU Config</string>
+    <string name="select_egl14">Use EGL14 GLCFactory</string>
     <string name="default_disk">Default Disk</string>
     
     <string name="games_listing">Game List</string>
