--- a/shell/android-studio/reicast/src/main/res/values/strings.xml
+++ b/shell/android-studio/reicast/src/main/res/values/strings.xml
@@ -45,8 +45,9 @@
     <string name="select_mipmaps">Use Mipmaps (fixes SGX540)</string>
     <string name="select_stretch">Widescreen Mode</string>
     <string name="set_frameskip">Frameskip Value</string>
-    <string name="select_syncrender">Synchronous Rendering</string>
     <string name="select_render">PVR Rendering (does nothing for now)</string>
+    <string name="select_syncrender">Synchronous Rendering</string>
+    <string name="select_modvols">Enable Modifier Volumes</string>
     <string name="select_fps">Show On-Screen FPS</string>
     <string name="select_software">Force Software Rendering</string>
     <string name="select_sound">Disable Emulator Sound</string>
