--- a/shell/android-studio/reicast/src/main/res/values/strings.xml
+++ b/shell/android-studio/reicast/src/main/res/values/strings.xml
@@ -95,7 +95,7 @@
     <string name="controller_compat">Enable Compatibility Mode</string>
     <string name="controller_unavailable">Gamepad IME detected!\nPlease disable native interface</string>
     <string name="enable_microphone">Enable Microphone(s)</string>
-    <string name="controller_1_vmu">Includes 2 VMUs (Cannot be modified)</string>
+    <string name="controller_1_vmu">Includes 2 VMUs (or 1 VMU / 1 Mic)</string>
     
     <string name="customize_physical_controls">Customize Physical Controls</string>
     <string name="map_keycode_title">Modify Controller</string>
